# hidroxmx-forecasting

./: .env.example  .gitignore  AUTHORS  CITATION.cff  LICENSE  README.md  pyproject.toml
conf/experiments/: metrics.yaml  r2.yaml  seeds.yaml  splits.yaml  training.yaml
docs/: brief_paper2.md  experiment-spec.md
notebooks/: 00_colab_entrypoint.ipynb
results/tables/: basin_inclusion.csv
scripts/: 10_build_signatures.py  11_train_forecaster.py  12_param_head.py  12_train_multistation.py  13_donor_matching.py  14_train_transfer.py  14_uq.py  15_conformal_uq.py  15_fuzzy_alert.py  16_coverage_map.py  17_evaluate.py  17_evaluate_alerts.py  18_bootstrap_analysis.py  19_paper_master_figure.py  20_dt_demo.py  20_figure_pub_summary.py  21_dt_paper_figure.py  21_figure_cross_basin.py  22_basin_inclusion.py  99_sync_results.py
src/hidroxmx/: __init__.py  coverage.py
src/hidroxmx/alert/: __init__.py  fuzzy.py
src/hidroxmx/data/: __init__.py  features.py  geo.py  splits.py  streams.py  windows.py
src/hidroxmx/eval/: __init__.py  bootstrap.py  metrics.py
src/hidroxmx/io/: __init__.py  checkpoint.py  manifest.py  r2.py  results.py  seeds.py
src/hidroxmx/models/: __init__.py  forecaster.py
src/hidroxmx/transfer/: __init__.py  attributes.py  signatures.py  similarity.py
src/hidroxmx/twin/: __init__.py  assimilation.py  scenarios.py
src/hidroxmx/uq/: __init__.py  conformal.py
src/hidroxmx/viz/: __init__.py  journal.py
tests/: test_alert_fuzzy.py  test_bootstrap.py  test_coverage.py  test_data_layer.py  test_features.py  test_metrics.py  test_results.py  test_transfer.py  test_twin.py  test_uq_conformal.py  test_viz_journal.py
