[project]
name = "hidroxmx-forecasting"
version = "0.1.0"
description = "Probabilistic streamflow forecasting and a scoped predictive digital-twin loop for Mexican pilot basins (Paper 2 of the HidroXAI-MX project)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Daniel Sánchez-Ruiz", email = "dsanchezro@ipn.mx" }]

# --- Core dependencies (kept lean; heavy DL frameworks come from Colab) ---
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "polars>=1.0",             # lazy scans of partitioned Parquet
    "scipy>=1.13",
    "pyyaml>=6.0",
    "click>=8.1",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "boto3>=1.34",             # R2 S3-compatible client
    "s3fs>=2024.6",            # optional filesystem view over R2
    "requests>=2.32",
]

[project.optional-dependencies]
# Torch and torch-adjacent libs are typically installed by Colab; keep as extras
# so that a local pip install without a GPU does not drag CUDA wheels.
torch = [
    "torch>=2.2",
    "lightning>=2.2",
]
geo = [
    "geopandas>=1.0",
    "shapely>=2.0",
    "rasterio>=1.3",
    "pyproj>=3.6",
]
uq = [
    "scikit-learn>=1.4",
    "properscoring>=0.1",      # CRPS
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "matplotlib>=3.8",
    "jupyterlab>=4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hidroxmx"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
packages = ["hidroxmx"]

[tool.pytest.ini_options]
addopts = "-q --cov=hidroxmx --cov-report=term-missing"
testpaths = ["tests"]
